Issue 5513, spacing fix on user_dashboard.js.

--- a/public/stylesheets/user_dashboard.css
+++ b/public/stylesheets/user_dashboard.css
@@ -12,6 +12,9 @@
   width: 780px;
   margin-right: 10px;
 }
+#results #bookshelf_panel li.listitem h3 .icon-delete {
+  visibility: visible;
+}
 #results #settings_panel,
 #results #collections_panel {
   margin-top: 5px;
